[project]
name = "lessons"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.17",
    "langchain-nvidia-ai-endpoints>=1.3.0",
    "langchain-openai>=1.2.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "sentence-transformers>=5.5.0",
]
